fix create short term options template duration bug, refactore